--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LoTUS-FD</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="description" content="LoTUS-BF - Neural Search Interface for Brain Functions" />
+    <meta name="theme-color" content="#0a1828" />
+    <!-- iOS 優化 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <title>LoTUS-BF | Cyberpunk Neural Search</title>
   </head>
   <body>
     <div id="root"></div>
